// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hash.rb 1`] = `
numbers = { one: 1, two: 2, three: 3, four: 4, five: 5, six: 6, seven: 7 }
numbers
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
numbers = { one: 1, two: 2, three: 3, four: 4, five: 5, six: 6, seven: 7 }
numbers

`;

exports[`hash_2.rb 1`] = `
numbers = { one: 1, two: 2, three: 3 }
numbers
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
numbers = { one: 1, two: 2, three: 3 }
numbers

`;

exports[`hash_3.rb 1`] = `
numbers = { one: 1, two: 2, three: 3, four: 4, five: 5, six: 6, seven: 7, eight: 8, nine: 9, ten: 10 }
numbers
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
numbers = {
  one: 1,
  two: 2,
  three: 3,
  four: 4,
  five: 5,
  six: 6,
  seven: 7,
  eight: 8,
  nine: 9,
  ten: 10
}
numbers

`;

exports[`hash_4.rb 1`] = `
numbers = { one: 1, two: 2, three: 3, four: 4, five: 5, six: 6, seven: 7, eight: 8, nine: 9, ten: 10, hash: { test: 1, test_2: 2}, hash_two: { one: 1, two: 2, three: 3, four: 4, five: 5, six: 6, seven: 7, eight: 8, nine: 9 }, }
numbers
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
numbers = {
  one: 1,
  two: 2,
  three: 3,
  four: 4,
  five: 5,
  six: 6,
  seven: 7,
  eight: 8,
  nine: 9,
  ten: 10,
  hash: { test: 1, test_2: 2 },
  hash_two: {
    one: 1,
    two: 2,
    three: 3,
    four: 4,
    five: 5,
    six: 6,
    seven: 7,
    eight: 8,
    nine: 9
  }
}
numbers

`;

exports[`hash_5.rb 1`] = `
{ one: 1, two: 2, three: 3, four: 4, five: 5, six: 6, seven: 7, eight: 8, nine: 10, eleven: 11, twenty: 20 }
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{
  one: 1,
  two: 2,
  three: 3,
  four: 4,
  five: 5,
  six: 6,
  seven: 7,
  eight: 8,
  nine: 10,
  eleven: 11,
  twenty: 20
}

`;

exports[`hash_rocket.rb 1`] = `
ROCKET = {
  'a' => 1,
  'b' => 2,
  'c' => 3,
}

symbol_map = {
  foo: "foo",
  :bar => "foo",
}

nested = {
  'a' => {
    'b' => {
      'c' => {
        'd' => 1,
        'rather_long_key_that_forces_wrapping' => 2,
        'e' => 3
      }
    }
  }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ROCKET = { 'a' => 1, 'b' => 2, 'c' => 3 }
symbol_map = { foo: 'foo', :bar => 'foo' }
nested = {
  'a' => {
    'b' => {
      'c' => {
        'd' => 1,
        'rather_long_key_that_forces_wrapping' => 2,
        'e' => 3
      }
    }
  }
}

`;
